fixed_according_review